# vino-gui-demo

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  classes.drawio  classes.puml
include/: Box.hpp  Fonts.hpp  Shader.hpp  Window.hpp  custom_errors.hpp
shaders/: basicFrag.glsl  basicVertex.glsl  colorFrag.glsl
src/: Box.cpp  Box.hpp  Fonts.cpp  Fonts.hpp  ImgData.cpp  ImgData.hpp  MainMenu.cpp  ScreenTexture.hpp  Shader.hpp  TitleScreen.cpp  Window.cpp  Window.hpp  main.cpp
